Correction du contrast du menu pour avoir un contraste superieur à 4,5.

--- a/css/aikido-nantes.css
+++ b/css/aikido-nantes.css
@@ -161,3 +161,7 @@ p {
 .infoDuMoment div {
 	margin-bottom : 15px
 }
+
+.navbar-light .navbar-nav .nav-link {
+	color: #42424B;
+}
